--- a/admin/index.html
+++ b/admin/index.html
@@ -146,15 +146,15 @@
             </div>
             <div class="content-body">
 
-                <div class="row">
+                <div class="row match-height">
                     <div class="col-xl-3 col-sm-6 col-12 p-1">
                         <div class="card mb-0">
                             <div class="card-content">
                                 <div class="card-body">
                                     <div class="media d-flex">
                                         <div class="media-body text-left">
-                                            <h3 class="warning">6 novas reservas</h3>
-                                            <span>Aguardam aprovação</span><br>
+                                            <h3 class="warning">6 reservas</h3>
+                                            <span>Para aprovar</span><br>
                                             <button type="button" class="btn btn-outline-warning btn-sm mt-1">ver reservas</button>
                                         </div>
                                         <div class="align-self-top">
@@ -171,7 +171,7 @@
                                 <div class="card-body">
                                     <div class="media d-flex">
                                         <div class="media-body text-left">
-                                            <h3 class="success">11 novas reservas</h3>
+                                            <h3 class="success">11 reservas</h3>
                                             <span>Confirmadas hoje</span><br>
                                             <button type="button" class="btn btn-outline-success btn-sm mt-1">ver reservas</button>
                                         </div>
@@ -189,7 +189,7 @@
                                 <div class="card-body">
                                     <div class="media d-flex">
                                         <div class="media-body text-left">
-                                            <h3 class="primary">47 total de reservas</h3>
+                                            <h3 class="primary">47 reservas</h3>
                                             <span>Últimos 7 dias</span><br>
                                             <button type="button" class="btn btn-outline-primary btn-sm mt-1">ver reservas</button>
                                         </div>
@@ -207,7 +207,7 @@
                                 <div class="card-body">
                                     <div class="media d-flex">
                                         <div class="media-body text-left">
-                                            <h3 class="cyan">29 novos clientes</h3>
+                                            <h3 class="cyan">29 clientes</h3>
                                             <span>Últimos 7 dias</span><br>
                                             <button type="button" class="btn btn-outline-cyan btn-sm mt-1">ver clientes</button>
                                         </div>
