--- a/admin/index.html
+++ b/admin/index.html
@@ -156,12 +156,12 @@
                                 <div class="card-body">
                                     <div class="media d-flex">
                                         <div class="media-body text-left">
-                                            <h3 class="amber">6 reservas</h3>
+                                            <h3 class="danger">6 reservas</h3>
                                             <span>Para aprovar</span><br>
-                                            <button type="button" class="btn btn-outline-amber btn-sm mt-1">ver reservas</button>
+                                            <button type="button" class="btn btn-outline-danger btn-sm mt-1">ver reservas</button>
                                         </div>
                                         <div class="align-self-top">
-                                            <i class="fa fa-calendar-plus-o amber font-large-2 float-right"></i>
+                                            <i class="fa fa-calendar-plus-o danger font-large-2 float-right"></i>
                                         </div>
                                     </div>
                                 </div>
