--- a/admin/index.html
+++ b/admin/index.html
@@ -229,7 +229,14 @@
                         <!-- Line Basic Chart Start -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">Reservas nos Últimos 7 dias</div>
+                                <div class="card-title">Reservas nos Últimos 7 dias
+                                    <button type="button" class="btn btn-outline-secondary dropdown-toggle btn-sm float-right" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-filter"></i></button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Reservas</a>
+                                        <a class="dropdown-item" href="#">Profissionais</a>
+                                        <a class="dropdown-item" href="#">Serviços</a>
+                                    </div>
+                                </div>
                                 <div id="line-basic-chart"></div>
                             </div>
                         </div>
@@ -239,7 +246,14 @@
                         <!-- Heatmap Basic Chart Start -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">Reservas por horário do dia</div>
+                                <div class="card-title">Reservas por horário do dia
+                                    <button type="button" class="btn btn-outline-secondary dropdown-toggle btn-sm float-right" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-filter"></i></button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Reservas</a>
+                                        <a class="dropdown-item" href="#">Profissionais</a>
+                                        <a class="dropdown-item" href="#">Serviços</a>
+                                    </div>
+                                </div>
                                 <div id="heatmap-basic-chart"></div>
                             </div>
                         </div>
