--- a/admin/index.html
+++ b/admin/index.html
@@ -123,6 +123,7 @@
                 <li class="nav-item open"><a href="#"><i class="fa fa-tachometer"></i><span class="menu-title">Painel Inicial</span></a></li>
                 <li class="nav-item"><a href="#"><i class="fa fa-calendar"></i><span class="menu-title">Agenda</span></a></li>
                 <li class="nav-item"><a href="#"><i class="fa fa-list-alt"></i><span class="menu-title">Reservas</span></a></li>
+                <li class="nav-item"><a href="#"><i class="fa fa-address-book-o"></i><span class="menu-title">Clientes</span></a></li>
                 <li class="nav-item"><a href="#"><i class="fa fa-pencil-square-o"></i><span class="menu-title">Gerenciar</span></a>                    
                     <ul class="menu-content">
                         <li><a class="menu-item" href="#">Empresa</a></li>
@@ -229,14 +230,7 @@
                         <!-- Line Basic Chart Start -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">Reservas nos Últimos 7 dias
-                                    <button type="button" class="btn btn-outline-secondary dropdown-toggle btn-sm float-right" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-filter"></i></button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Reservas</a>
-                                        <a class="dropdown-item" href="#">Profissionais</a>
-                                        <a class="dropdown-item" href="#">Serviços</a>
-                                    </div>
-                                </div>
+                                <div class="card-title">Reservas nos Últimos 7 dias</div>
                                 <div id="line-basic-chart"></div>
                             </div>
                         </div>
@@ -246,14 +240,7 @@
                         <!-- Heatmap Basic Chart Start -->
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">Reservas por horário do dia
-                                    <button type="button" class="btn btn-outline-secondary dropdown-toggle btn-sm float-right" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-filter"></i></button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Reservas</a>
-                                        <a class="dropdown-item" href="#">Profissionais</a>
-                                        <a class="dropdown-item" href="#">Serviços</a>
-                                    </div>
-                                </div>
+                                <div class="card-title">Reservas por horário do dia</div>
                                 <div id="heatmap-basic-chart"></div>
                             </div>
                         </div>
@@ -262,9 +249,6 @@
                 </div>
 
                 <div class="row match-height">
-                    <div class="col-12 col-md-6">
-                       
-                    </div>
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
