--- a/admin/empresa.html
+++ b/admin/empresa.html
@@ -349,6 +349,12 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-12 text-right">
+                        <button type="button" class="btn btn-success shadow">Atualizar cadastro</button>
+                    </div>
+                </div>
                 
 
             </div>
