--- a/admin/empresa.html
+++ b/admin/empresa.html
@@ -151,8 +151,8 @@
             </div>
             <div class="content-body">
                 <div class="row">
-                    <div class="col-8 p-1">
-                        <div class="card border-top-3 border-top-info">
+                    <div class="col-md-8 p-1">
+                        <div class="card border-top-3 border-top-primary">
                             <div class="card-content">
                                 <div class="card-body">
                                     <label class="h5 font-weight-bolder mb-2">Informações da Empresa</label>
@@ -251,8 +251,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 p-1">
-                        <div class="card border-top-3 border-top-info">
+                    <div class="col-md-4 p-1">
+                        <div class="card border-top-3 border-top-primary">
                             <div class="card-content">
                                 <div class="card-body">
                                     <label class="h5 font-weight-bolder mb-2">Horário de Funcionamento</label>
