--- a/admin/empresa.html
+++ b/admin/empresa.html
@@ -152,7 +152,7 @@
             <div class="content-body">
                 <div class="row">
                     <div class="col-md-8 p-1">
-                        <div class="card border-top-3 border-top-primary">
+                        <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
                                 <div class="card-body">
                                     <label class="h5 font-weight-bolder mb-2">Informações da Empresa</label>
@@ -252,7 +252,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 p-1">
-                        <div class="card border-top-3 border-top-primary">
+                        <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
                                 <div class="card-body">
                                     <label class="h5 font-weight-bolder mb-2">Horário de Funcionamento</label>
