--- a/admin/empresa.html
+++ b/admin/empresa.html
@@ -13,6 +13,7 @@
 
     <!-- BEGIN: Vendor CSS-->
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/vendors.min.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/forms/toggle/switchery.min.css">
     <!-- END: Vendor CSS-->
 
     <!-- BEGIN: Theme CSS-->
@@ -25,6 +26,7 @@
     <!-- BEGIN: Page CSS-->
     <link rel="stylesheet" type="text/css" href="../app-assets/css/core/menu/menu-types/vertical-menu.css">
     <link rel="stylesheet" type="text/css" href="../app-assets/fonts/simple-line-icons/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../app-assets/css/plugins/forms/switch.css">
     <!-- END: Page CSS-->
 
     <!-- BEGIN: Custom CSS-->
@@ -150,7 +152,7 @@
                 <h1 class="h4 font-weight-bolder pl-1">Gerenciar Empresa</h1>
             </div>
             <div class="content-body">
-                <div class="row">
+                <div class="row match-height">
                     <div class="col-md-8 p-1">
                         <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
@@ -259,87 +261,66 @@
                                     <form accept="#">
                                         <div class="form-body">
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" name="customCheck" id="customCheck1">
-                                                        <label class="custom-control-label" for="customCheck1"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize1" class="switchery" data-size="xs" />
+                                                    <small for="switcherySize1" class="">domingo</small>
                                                 </div>
-                                                <div class="col-3 p-0">domingo</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" name="customCheck" id="customCheck2">
-                                                        <label class="custom-control-label" for="customCheck2"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize2" class="switchery" data-size="xs" checked />
+                                                    <small for="switcherySize2" class="">segunda</small>
                                                 </div>
-                                                <div class="col-3 p-0">segunda</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" name="customCheck" id="customCheck3">
-                                                        <label class="custom-control-label" for="customCheck3"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize3" class="switchery" data-size="xs" checked />
+                                                    <small for="switcherySize3" class="">terça</small>
                                                 </div>
-                                                <div class="col-3 p-0">terça</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" name="customCheck" id="customCheck4">
-                                                        <label class="custom-control-label" for="customCheck4"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize4" class="switchery" data-size="xs" checked />
+                                                    <small for="switcherySize4" class="">quarta</small>
                                                 </div>
-                                                <div class="col-3 p-0">quarta</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" name="customCheck" id="customCheck5">
-                                                        <label class="custom-control-label" for="customCheck5"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize5" class="switchery" data-size="xs" checked />
+                                                    <small for="switcherySize5" class="">quinta</small>
                                                 </div>
-                                                <div class="col-3 p-0">quinta</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" name="customCheck" id="customCheck6">
-                                                        <label class="custom-control-label" for="customCheck6"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize6" class="switchery" data-size="xs" checked />
+                                                    <small for="switcherySize6" class="">sexta</small>
                                                 </div>
-                                                <div class="col-3 p-0">sexta</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                             <div class="row align-items-center pr-1 pl-1 mb-1">
-                                                <div class="col-1 p-0">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" name="customCheck" id="customCheck7">
-                                                        <label class="custom-control-label" for="customCheck7"></label>
-                                                    </div>
+                                                <div class="col-4 p-0">
+                                                    <input type="checkbox" id="switcherySize7" class="switchery" data-size="xs" />
+                                                    <small for="switcherySize7" class="">sábado</small>
                                                 </div>
-                                                <div class="col-3 p-0">sábado</div>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="08:00"></div>
-                                                <div class="col-2 p-0 text-center">às</div>
+                                                <small class="col-2 p-0 text-center">às</small>
                                                 <div class="col-3 p-0"><input type="text" class="form-control form-control-sm" placeholder="20:00"></div>
                                             </div>
                                         </div>
@@ -351,7 +332,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-12 text-right">
+                    <div class="col-12">
                         <button type="button" class="btn btn-success shadow">Atualizar cadastro</button>
                     </div>
                 </div>
@@ -377,6 +358,8 @@
     <!-- BEGIN Vendor JS-->
 
     <!-- BEGIN: Page Vendor JS-->
+    <script src="../app-assets/vendors/js/forms/toggle/bootstrap-checkbox.min.js"></script>
+    <script src="../app-assets/vendors/js/forms/toggle/switchery.min.js"></script>    
     <!-- END: Page Vendor JS-->
 
     <!-- BEGIN: Theme JS-->
@@ -385,6 +368,7 @@
     <!-- END: Theme JS-->
 
     <!-- BEGIN: Page JS-->
+    <script src="../app-assets/js/scripts/forms/switch.js"></script>
     <!-- END: Page JS-->
 
 </body>
