--- a/admin/add-profissional.html
+++ b/admin/add-profissional.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Empresa - App Tareservado</title>
+    <title>Cadastrar Profissional - App Tareservado</title>
     <link rel="apple-touch-icon" href="../app-assets/images/logo/icone.png">
     <link rel="shortcut icon" type="image/x-icon" href="../app-assets/images/logo/icone.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -138,11 +138,11 @@
                 <li class="nav-item"><a href="#"><i class="fa fa-address-book-o"></i><span class="menu-title">Clientes</span></a></li>
                 <li class="nav-item"><a href="#"><i class="fa fa-pencil-square-o"></i><span class="menu-title">Gerenciar</span></a>                    
                     <ul class="menu-content">
-                        <li class="active"><a class="menu-item" href="empresa.html">Empresa</a></li>
+                        <li><a class="menu-item" href="empresa.html">Empresa</a></li>
                         <li><a class="menu-item" href="#">Equipe</a>
-                            <ul class="menu-content">
+                            <ul class="menu-content open">
                                 <li><a class="menu-item" href="listar-profissional.html">Listar Profissionais</a></li>
-                                <li><a class="menu-item" href="add-profissional.html">Novo Profissional</a></li>
+                                <li class="active"><a class="menu-item" href="add-profissional.html">Novo Profissional</a></li>
                             </ul>
                         </li>
                         <li><a class="menu-item" href="#">Serviços</a>
@@ -168,7 +168,7 @@
         <div class="content-overlay"></div>
         <div class="content-wrapper">
             <div class="content-header row">
-                <h1 class="h4 font-weight-bolder pl-1">Gerenciar Empresa</h1>
+                <h1 class="h4 font-weight-bolder pl-1">Cadastrar Profissional</h1>
             </div>
             <div class="content-body">
                 <div class="row">
@@ -176,14 +176,14 @@
                         <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
                                 <div class="card-body">
-                                    <label class="h5 font-weight-bolder mb-2">Informações da Empresa</label>
+                                    <label class="h5 font-weight-bolder mb-2">Informações do Profissional</label>
                                     <form accept="#">
                                         <div class="form-body">
                                             <div class="row">
                                                 <div class="col-md-4">
                                                     <div class="form-group">
-                                                        <label for="basicInput">Nome da empresa</label>
-                                                        <input type="text" class="form-control" placeholder="Empresa Modelo">
+                                                        <label for="basicInput">Nome Completo</label>
+                                                        <input type="text" class="form-control" placeholder="Sena Madureira">
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4">
@@ -199,56 +199,11 @@
                                                     </div>
                                                 </div>
                                             </div>  
+                                            
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col-md-12">
                                                     <div class="form-group">
-                                                        <label for="basicInput">Endereço</label>
-                                                        <input type="text" class="form-control" placeholder="Rua Padre José Natuzzi">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-2">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Número</label>
-                                                        <input type="text" class="form-control" placeholder="342">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Complemento</label>
-                                                        <input type="text" class="form-control" placeholder="Casa 2">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-md-3">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Bairro</label>
-                                                        <input type="text" class="form-control" placeholder="Vila Pereira Cerca">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-4">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Cidade</label>
-                                                        <input type="text" class="form-control" placeholder="São Paulo">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-2">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Estado</label>
-                                                        <input type="text" class="form-control" placeholder="SP">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">CEP</label>
-                                                        <input type="text" class="form-control" placeholder="02931-090">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-md-7">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Quais serviços sua empresa oferece?</label>
+                                                        <label for="basicInput">Quais serviços ele presta?</label>
                                                         <select class="select2 form-control" multiple="multiple" id="id_h5_multi">
                                                             <optgroup label="Beleza e Estética">
                                                                 <option value="">Salão de Beleza</option>
@@ -272,29 +227,9 @@
                                                             </optgroup>
                                                         </select>
                                                     </div>
-                                                </div>
-                                                <div class="col-md-5">
-                                                    <div class="form-group">
-                                                        <label for="basicInput">Quantos funcionários tem?</label>
-                                                        <select class="form-control">
-                                                            <option value=""></option>
-                                                            <option value="">1 a 5 pessoas</option>
-                                                            <option value="">6 a 15 pessoas</option>
-                                                            <option value="">mais de 15 pessoas</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
+                                                </div>                                                
                                             </div>
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <fieldset>
-                                                        <div class="custom-control custom-checkbox">
-                                                            <input type="checkbox" class="custom-control-input" name="customCheck" id="customCheck1">
-                                                            <label class="custom-control-label" for="customCheck1">Não divulgar meu endereço no site e notificações de email.</label>
-                                                        </div>
-                                                    </fieldset>
-                                                </div>   
-                                            </div>
+                                            
                                         </div>
                                     </form>
                                 </div>
@@ -305,7 +240,7 @@
                         <div class="card border-top-3 border-top-primary mb-0">
                             <div class="card-content">
                                 <div class="card-body">
-                                    <label class="h5 font-weight-bolder mb-2">Horário de Funcionamento</label>
+                                    <label class="h5 font-weight-bolder mb-2">Horário de Trabalho</label>
                                     <form accept="#">
                                         <div class="form-body table-responsive">
                                             <table class="table table-hover ps-container ps-theme-default table-horario-empresa">
@@ -313,10 +248,10 @@
                                                     <tr>
                                                         <th></th>
                                                         <th></th>
-                                                        <th><small>abre</small></th>
-                                                        <th><small>almoço</small></th>
-                                                        <th><small>retorno</small></th>
-                                                        <th><small>fecha</small></th>
+                                                        <th><small>inicia</small></th>
+                                                        <th><small>almoça</small></th>
+                                                        <th><small>retorna</small></th>
+                                                        <th><small>encerra</small></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
