--- a/admin/add-profissional.html
+++ b/admin/add-profissional.html
@@ -323,7 +323,7 @@
 
                 <div class="row mt-2">
                     <div class="col-12">
-                        <button type="button" class="btn btn-success shadow">Atualizar cadastro</button>
+                        <button type="button" class="btn btn-success shadow">Cadastrar profissional</button>
                     </div>
                 </div>
                 
