--- a/admin/index.html
+++ b/admin/index.html
@@ -100,7 +100,7 @@
                     <ul class="nav navbar-nav float-right align-items-center">
                         <li class="nav-item">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-outline-primary white mr-1 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fa fa-plus-circle"></i>Adicionar</button>
+                                <button type="button" class="btn btn-primary white mr-1 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="fa fa-plus-circle"></i>Adicionar</button>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item font-small-3" href="#">Reserva</a>
                                     <a class="dropdown-item font-small-3" href="#">Cliente</a>
